mux-compiler/tests/snapshots/lexer_integration__file_lexer__empty_map_literal.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "`{:}` is the empty map, `{}` is the empty set",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "map",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Comma,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "m",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: Colon,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "set",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "m",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "m",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "size",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "size",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "still usable after construction",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "m",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBracket,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "a",
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseBracket,
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            1,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "add",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            5,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "m",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "s",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "empty map nested as a map value",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "map",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Comma,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "map",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Comma,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "nested",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            1,
        ),
        span: Span { .. },
    },
    Token {
        token_type: Colon,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: Colon,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "nested",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "empty set nested as a map value",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "map",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Comma,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "set",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "mixed",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            1,
        ),
        span: Span { .. },
    },
    Token {
        token_type: Colon,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "mixed",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "whitespace and newlines inside the literal",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "map",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Lt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Comma,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Gt,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "spaced",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: Colon,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "spaced",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
]
